<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mad.com.myflight.views.activities.SearchFlightsActivity"
    android:orientation="vertical">

    <SearchView
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:id="@+id/origin_searchview"
        android:queryHint="Origin"/>

    <SearchView
        android:id="@+id/destination_searchview"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:queryHint="Destination"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <EditText
            android:id="@+id/departureDateEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/departure_date"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/returnDateEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"
            android:hint="@string/return_date"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cabin_class"/>
        <Spinner
            android:id="@+id/cabin_class"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/category_cabin_class"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/adult"/>

        <Spinner
            android:id="@+id/adult_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/category_passenger_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/child"/>

        <Spinner
            android:id="@+id/child_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/category_passenger_number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/infant"/>

        <Spinner
            android:id="@+id/infant_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/category_passenger_number"/>

    </LinearLayout>

    </LinearLayout>

    <CheckBox
        android:id="@+id/single_trip_checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/single_trip" />

    <Button
        android:id="@+id/search_flight_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_flights"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

</LinearLayout>
